--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/pipModeVideoFragment">
+    app:startDestination="@id/videosFragment">
 
     <fragment
         android:id="@+id/pipModeVideoFragment"
         android:name="com.example.pipmodewithviews.ui.PipModeVideoFragment"
-        android:label="PipModeVideoFragment" />
+        android:label="PipModeVideoFragment"
+        tools:layout="@layout/fragment_pip_video" />
+    <fragment
+        android:id="@+id/videosFragment"
+        android:name="com.example.pipmodewithviews.ui.videos.VideosFragment"
+        android:label="VideosFragment"
+        tools:layout="@layout/fragment_videos">
+        <action
+            android:id="@+id/action_videosFragment_to_pipModeVideoFragment"
+            app:destination="@id/pipModeVideoFragment" />
+    </fragment>
 </navigation>
