--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/pipModeVideoFragment"
-        android:name="com.example.pipmodewithviews.ui.PipModeVideoFragment"
+        android:name="com.example.pipmodewithviews.ui.currentvideo.PipModeVideoFragment"
         android:label="PipModeVideoFragment"
         tools:layout="@layout/fragment_pip_video" />
     <fragment
